--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -9,6 +9,18 @@
         flex-direction: column;
         align-items: flex-start;
         height: inherit;
+        margin-left: 137px;
+
+        .title {
+            width: 574px;
+            margin: 100px 0 24px 0;
+        }
+
+        p {
+            width: 513px;
+            line-height: 24px;
+            margin-bottom: 40px;
+        }
 
         .btn {
             border-radius: 10px;
@@ -19,6 +31,15 @@
             color: #0050EF;
             font-weight: bold;
             padding: 16px 32px;
+            margin-bottom: 120px;
+        }
+
+        .dots {
+            button {
+                width: 29px;
+                height: 3px;
+                margin-right: 3px;
+            }
         }
     }
 }
