--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -1,6 +1,7 @@
 .wrap {
     background: linear-gradient(100.68deg, #5991FF 13.6%, #0050EF 94.69%);
     height: 546px;
+    margin-bottom: 40px;
 
     .art {
         background: url('./img/K4C.png') right center no-repeat;
@@ -13,13 +14,15 @@
 
         .title {
             width: 574px;
-            margin: 100px 0 24px 0;
+            margin: 100px 0 6px 0;
+            font-size: 40px;
+            line-height: 56px;
         }
 
         p {
             width: 513px;
             line-height: 24px;
-            margin-bottom: 40px;
+            margin-bottom: 31px;
         }
 
         .btn {
@@ -31,14 +34,21 @@
             color: #0050EF;
             font-weight: bold;
             padding: 16px 32px;
-            margin-bottom: 120px;
+            margin-bottom: 102px;
+            font-family: 'Montserrat';
+            font-size: 16px;
         }
 
         .dots {
             button {
                 width: 29px;
                 height: 3px;
-                margin-right: 3px;
+                margin-right: 6px;
+                opacity: 0.4;
+            }
+
+            button:first-child {
+                opacity: 1;
             }
         }
     }
