--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,16 +2,69 @@
     background-color: #011846;
     color: #fff;
     height: 228px-51px-48px;
-    padding: 48px 138px 51px 138px;
+    padding: 48px 9.6% 51px 9.6%;
+
+    @media (max-width: 1200px) {
+        padding-right: 8%;
+        padding-left: 6%;
+        font-size: 15px;
+    }
+
+    @media (max-width: 710px) {
+        padding-bottom: 120px;
+    }
+
+    @media (max-width: 506px) {
+        padding-top: 24px;
+        padding-bottom: 24px;
+        height: 250px;
+    }
+
+    @media (max-width: 390px) {
+        padding-left: 16px;
+        height: 204px;
+    }
 
     .menu {
         display: flex;
         justify-content: space-between;
         margin-bottom: 66px;
+
+        img {
+            @media (max-width: 390px) {
+                width: 128.7px;
+                height: 32px;
+                margin-bottom: 34px;
+            }
+        }
+
+        @media (max-width: 710px) {
+            flex-direction: column;
+        }
+
+        @media (max-width: 506px) {
+            margin-bottom: 47px;
+        }
+
+        @media (max-width: 390px) {
+            margin-bottom: 20px;
+        }
     }
 
     img {
         background-color: inherit;
+
+        @media (max-width: 710px) {
+            margin-bottom: 37px;
+        }
+
+        @media (max-width: 506px) {
+            margin-bottom: 32px;
+        }
+
+        @media (max-width: 390px) {
+            margin-bottom: 25px;
+        }
     }
 
     .info {
@@ -20,9 +73,55 @@
         justify-content: space-between;
         align-items: center;
 
+        @media (max-width: 1200px) {
+            width: 50%;
+        }
+
+        @media (max-width: 845px) {
+            width: 60%;
+            flex-wrap: wrap;
+        }
+
+        @media (max-width: 710px) {
+            width: 80%;
+        }
+
+        @media (max-width: 506px) {
+            width: 90%;
+        }
+
+        @media (max-width: 370px) {
+            width: 100%;
+        }
+
         a {
             text-decoration: none;
             color: #fff;
+
+            @media (max-width: 506px) {
+                width: 140px;
+                font-size: 14px;
+                padding-bottom: 16px;
+            }
+
+            @media (max-width: 370px) {
+                font-size: 13px;
+                width: 130px;
+            }
+        }
+
+        @media (max-width: 506px) {
+            a:nth-child(2) {
+                order: 2;
+            }
+
+            a:nth-child(3) {
+                order: 1;
+            }
+
+            a:nth-child(4) {
+                order: 3;
+            }
         }
     }
 
@@ -30,9 +129,18 @@
         display: flex;
         justify-content: space-between;
 
+        @media (max-width: 710px) {
+            flex-direction: column-reverse;;
+        }
+
         .name_company {
             display: inline;
             font-size: 14px;
+            opacity: 0.8;
+
+            @media (max-width: 390px) {
+                font-size: 12px;
+            }
         }
     
         .social_networks {
@@ -40,6 +148,15 @@
             width: 10.8%;
             justify-content: space-between;
             align-items: center;
+
+            @media (max-width: 935px) {
+                width: 25%;
+            }
+
+            @media (max-width: 935px) {
+                width: 36.7%;
+                
+            }
         }
     }
 }
