--- a/src/components/PostList/PostList.module.scss
+++ b/src/components/PostList/PostList.module.scss
@@ -18,6 +18,14 @@
     gap: 20px;
     padding: 52px-32px 9.5% 80px 9.5%;
 
+    @media (max-width: 875px) {
+        grid-template-columns: 1fr;
+    }
+
+    @media (max-width: 390px) {
+        padding: 26px 4.5% 57px 4.5%;
+    }
+
     .item {
         display: flex;
         flex-direction: column;
@@ -26,12 +34,21 @@
         border-radius: 20px;
         background: #FFF;
 
+        @media (max-width: 390px) {
+            padding: 18px;
+            height: 207px;
+        }
+
         .date {
             color: #10B2D0;
             font-size: 11px;
             line-height: 18px;
             font-weight: 600;
             padding-bottom: 8px;
+
+            @media (max-width: 390px) {
+                font-size: 12px;
+            }
         }
 
         .title {
@@ -42,6 +59,18 @@
             height: 55px;
             padding-bottom: 16px;
             overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+
+            @media (max-width: 390px) {
+                font-size: 18px;
+                line-height: 24px;
+                padding-bottom: 9px;
+                height: 42px;
+                margin-bottom: 13px;
+            }
         }
 
         .content {
@@ -55,6 +84,13 @@
             display: -webkit-box;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
+
+            @media (max-width: 390px) {
+                font-size: 14px;
+                line-height: 22px;
+                margin-bottom: 14px;
+                height: 47px;
+            }
         }
 
         button {
@@ -64,6 +100,13 @@
             border: none;
             border-radius: 10px;
             padding: 8px 20px;
+            font-size: 12px;
+            color: #0050EF;
+
+            @media (max-width: 390px) {
+                height: 33px;
+                padding: 0;
+            }
         }
     }
 }
