--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -15,5 +15,13 @@
     @media (max-width: 875px) {
       flex-direction: column;
     }
+
+    @media (max-width: 768px) and (orientation: landscape) {
+      position: static;
+    }
+
+    @media (max-width: 390px) {
+      top: 71px;
+    }
   }
 }
