--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,10 @@
         padding: 0 4%;
     }
 
+    @media (max-width: 768px) and (orientation: landscape) {
+        position: static;
+    }
+
     @media (max-width: 390px) {
         height: 58px;
         padding-bottom: 13px;
